2007-06-21  Ethan Merritt  <merritt@u.washington.edu>

	Fix two special cases where gnuplot auto-increments the line type, but
	does not check whether the user has requested user-defined line styles
	instead (via "set style increment user").

	* src/graph3d.c (do_3dplot cntr3d_lines):  If the [default] option
	`set clabel` is in effect then contours auto-increment over line types.
	Check for prefer_line_styles at this point.

	* src/graphics.c (do_plot plot_boxes): Columnstacked histograms auto-
	increment over line types.  Check for prefer_line_styles at thie point.

2007-06-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/internal.c (f_sprintf): Remove any remaining escape sequences (%%)
	from the tail of the format string after all of the input variables have
	been processed.
	Bug #1739625

2007-06-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/save.c (save_tics): save [xyz]tics must not follow the "offset"
	info with a bare number, because a negative number will be mis-parsed.
	Bugfix.

2007-06-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/unset.c (unset_label): Do not treat "unset label <n>" as a fatal
	error just because label <n> is not currently defined. Bug #1732706

	* term/post.trm (PS_load_fontfile): Add missing %.  Bug #1732991

2007-06-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Hotkey 'q' does not close the pm terminal.

2007-06-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/djsvga.trm: Unify color sequence comply with other terminals.
	Fix DJSVGA_set_font(fontname) for an empty fontname.

	* src/plot.c (main): Avoid printing "??Unknow" as the System welcome
	message under some versions of DOS (compilation by DJGPP).

	* config/config.dj2 config/makefile.dj2: Updated Makefile for djgpp
	using a config.h file.

2007-06-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/history.c (write_history_n): Cannot use int_error() when exiting
	gnuplot.

2007-06-03  Petr Mikulik  <mikulik@physics.muni.cz>
