@@ -4,11 +4,13 @@ New features, changes and fixes since gnuplot version 4.2
 * NEW set term latex {size XX,YY}
 * FIX buffering of very long input lines
 * FIX clipping of image data against plot boundary
-* FIX defer x11 initialization
 * FIX polygon clipping bugs
 * FIX key sample for plots with variable color
 * FIX wxt initialization on non-gnu systems
+* FIX escape sequence %% handling in sprintf() format strings
 * FIX Apply "set style incr user" to 3D contours and to columnstacked histograms
+* FIX Allow string variable as filename for "fit via <filename>"
+* CHANGE defer x11 initialization
 * CHANGE clean up configuration files for amg, cyg, mgw, dj2
 * CHANGE modify SVG output to accommodate non-compliant viewers
 * CHANGE allow 'strcol()' as shorthand for 'stringcolumn()'
