@@ -1,3 +1,9 @@
+2007-07-17  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/fit.c (fit_command):
+	Accept a string variable as the file name for "fit via <viafile>".
+	Bug #1755532
+
 2007-06-21  Ethan Merritt  <merritt@u.washington.edu>
 
 	Fix two special cases where gnuplot auto-increments the line type, but
